# textrenderer

./: CMakeLists.txt  Makefile  main.cpp
